                    Changes made to Pyjamas since 0.6
                    ---------------------------------

 * Added first port of GChart - http://code.google.com/p/gchart.
   java2py.py converted, then manual update.  Passes syntax check
   but that's about it...

 * Added property()

 * Added staticmethod()

 * Added __pyjamas__.setCompilerOptions()

 * Added descriptors (enables old style decorators)

 * Added del cls.attr

 * More checks in list methods

 * Javascript keywords are possible/allowed as attibutes/modules

 * All builtins can be overridden

 * Added support for *args/**kwargs for lambda

 * Added support mutable default in functions

 * Added keyword args to list.sort (thanks to Beni Cherniavsky)

 * Fixed toggle example and button handling #236

                    Changes made to Pyjamas since 0.5p1
                    -----------------------------------

 * Resolved getAbsoluteTop and getAbsoluteLeft in pyjd hulahop, pyjd
   pywebkitgtk, Safari, Mozilla (including 3.5), webkit but NOT IE6
   and NOT pyjd MSHTML.

 * Added jsimport example (direct from kees's commit message :)

 * Added __pyjamas__.jsimport(path, mode, location)

 * remove dependency of pywin32 in pyjd MSHTML port.

 * improved event handling of pyjd MSHTML port.

 * Added platform overrides system... to pyjd!  MSHTML, hulahop and pywebkitgtk
   can now have their own platform-specific overrides.

 * Added debugger() to __pyjamas__

 * Added javascript inclusion via --include-static-js and __pyjamas__.include()

 * Added dict pop and popitem, thanks to Beni Cherniavsky

 * Added build option --bootstrap-file and a bootstrap_progress.js

 * Discarded strings are not getting translated anymore

 * Added --downloads-(yes/no) to buildall.sh and employeeadmin/build.sh

 * Added experimental support for MSHTML as a Pyjamas Desktop engine

 * Added lightout example from Radoslav Kirov

 * Added if and nested for to list comprehension

 * Added base64 module (not encode/decode file)
